--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,17 @@
         app:layout_constraintBottom_toTopOf="@id/container"
         app:layout_constraintTop_toTopOf="parent">
 
+       <com.google.android.material.button.MaterialButton
+           android:id="@+id/go_btn"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           style="@style/Orange.Button"
+           android:layout_marginTop="16dp"
+           android:text="Отправить результат"
+           android:onClick="onGoClick"
+           android:textSize="16sp"
+           />
+
         <TextView
             android:id="@+id/tv_result"
             android:layout_width="wrap_content"
